--- a/templates/tumblelog/post_detail.html
+++ b/templates/tumblelog/post_detail.html
@@ -18,5 +18,12 @@
       {{ comment.text }}
     {% endfor %}
   {% endif %}
+  <h2>Add a comment</h2>
+  <form action="." method="post">
+    {% include "_forms.html" %}
+    <div class="actions">
+      <input type="submit" class="btn primary" value="comment">
+    </div>
+  </form>
 {% endblock %}
 
