--- a/templates/tumblelog/post_detail.html
+++ b/templates/tumblelog/post_detail.html
@@ -7,7 +7,19 @@
 {% endblock %}
 
 {% block content %}
-  <p>{{ post.body }}<p>
+  {% if post.post_type == 'p' %}
+    <p>{{ post.body }}</p>
+  {% endif %}
+  {% if post.post_type == 'v' %}
+    {{ post.embed_code|safe }}
+  {% endif %}
+  {% if post.post_type == 'i' %}
+    <p><img src="{{ post.image_url }}" /></p>
+  {% endif %}
+  {% if post.post_type == 'q' %}
+    <blockquote>{{ post.body }}</blockquote>
+    <p>{{ post.author }}</p>
+  {% endif %}
   <p>{{ post.created_at }}</p>
   <hr>
   <h2>Comments</h2>
